2010-03-25  Andreas Kupries  <aku@bluepeak.andreas.kupries.org>

	* stack_oo.tcl: Remove superfluous 'package require'. Handled by
	  stack.tcl.

2010-03-23  Andreas Kupries  <aku@bluepeak.andreas.kupries.org>

	* stack_oo.tcl: Tcl implementation of struct::stack based
	* stack.tcl: on TclOO. Available in 8.5+TclOO, and 8.6+.
	* stack.bench: Fixed missing dependency in benchmarks.
	* stack.test: Updated tests (different error messages).
	* stack.testsuite: Bumped version to 1.5.1.
	* stack.man:
	* pkgIndex.tcl:

	* queue_oo.tcl: Tcl implementation of struct::queue based
	* queue.tcl: on TclOO. Available in 8.5+TclOO, and 8.6+.
	* queue.bench: Updated and fixed benchmarks, and tests
	* queue.test: (different error messages). Bumped version
	* queue.testsuite: to 1.4.2.
	* queue.man:
	* pkgIndex.tcl:

	* sets.bench: Updated to allow switching of implementations.

2010-03-16  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl: Fix version mismatch for struct::stack.

2009-03-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* stack.man: struct::stack bumped to version 1.5. API extensions:
	* stack.tcl: New methods getr, peekr, trim*. The first two return
	* stack.test: their results in reversed order. For use in places
	* stack.testsuite: which need the reverted order. As the regular
	* stack/m.c: order requires an internal [lreverse], to be undone
	* stack/m.h: by the caller it is better to simply avoid both
	* stack/ms.c: [lreverse]s. Similarly, trim* does the trim, without
	* stack/s.c: returning the trimmed items, for use where they are
	* stack/s.h: thrown away anyway. ... Further, inlined the peek/pop
	* stack_tcl.tcl: calls internal to get and trim, allowing
	* pkgIndex.tcl: simplification of the resulting code, like
	  avoidance of additional argument checks. ... At last, now using
	  8.5 features when detecting Tcl 8.5+ as our runtime ... I.e.
	  ensembles for the method dispatch instead of doing everything on